# TeamAlpha

./: .dockerignore  .gitignore  .hfignore  Dockerfile  README.md  __init__.py  check_api.py  check_status.py  client.py  inference.py  ingest_dataset.py  ingest_qdrant.py  models.py  openenv.yaml  push_clean.py  pyproject.toml  requirements.txt
dataset/: tasks.jsonl
server/: __init__.py  app.py  environment.py  grader.py  rag_retriever.py  reward.py  task_manager.py  web_search.py  web_search_tool.py
tests/: __init__.py  test_environment.py  test_grader.py  test_reward.py  test_web_search_tool.py
